--- a/8-cuma-proje-1/index.html
+++ b/8-cuma-proje-1/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Fcoder</title>
     <!--Stil Dosyası-->
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
   </head>
   <body>
     <!--Header Alanı Başlangıç-->
@@ -16,8 +16,8 @@
         <a href="">Tanıtım</a>
         <a href="">Adımlar</a>
         <a href="" class="link">Anasayfa</a>
-        <a href="./projects.html" class="link">Projeler</a>
-        <a href="./teams.html" class="link">Takım</a>
+        <a href="./html/projects.html" class="link">Projeler</a>
+        <a href="./html/teams.html" class="link">Takım</a>
       </nav>
       <button class="nav-button">|||</button>
     </header>
@@ -62,6 +62,100 @@
       </section>
     </main>
 
+    <section id="cards-sec">
+      <div class="cards-sec-info">
+        <h1>İnovasyon ve Ar-Ge</h1>
+        <p>
+          Yeni teknolojik trendleri takip etme, ürün geliştirme ve yenilikçi
+          fikirlerin nasıl hayata geçirildiği hakkında paragraflar. Ar-Ge
+          projeleriniz hakkında bilgiler ve yürüttüğünüz çalışmaların sonuçları
+          hakkında özet bilgiler.
+        </p>
+      </div>
+
+      <div class="cards">
+        <!--card-->
+        <div class="card">
+          <video>
+            <source src="./images/first.mp4" />
+          </video>
+          <h1>Geliştirme</h1>
+          <p>
+            Şirket içi temel geliştiricilerimiz, bu son teknoloji blok
+            zincirinin teknolojik çekirdeği olan protokolü üzerinde çalışarak
+            Tezos'un teknolojik ilerlemesini desteklemektedir.
+          </p>
+        </div>
+        <!--card bitiş-->
+
+        <!--card-->
+        <div class="card">
+          <video>
+            <source src="./images/third.mp4" />
+          </video>
+          <h1>Benimseme</h1>
+          <p>
+            Yaratıcı ve kurumsal ortaklıklar, işbirlikleri ve ticari anlaşmalar
+            aracılığıyla ekosistem içinde değer oluşturmaya ve benimsemeyi
+            sağlamaya yardımcı oluyoruz.
+          </p>
+        </div>
+        <!--card bitiş-->
+
+        <!--card-->
+        <div class="card">
+          <video>
+            <source src="./images/second.mp4" />
+          </video>
+          <h1>Girişimcilik</h1>
+          <p>
+            Şirket içi temel geliştiricilerimiz, bu son teknoloji blok
+            zincirinin teknolojik çekirdeği olan protokolü üzerinde çalışarak
+            Tezos'un teknolojik ilerlemesini desteklemektedir.
+          </p>
+        </div>
+        <!--card bitiş-->
+      </div>
+    </section>
+
+    <!--Liste Alanı Başlangıç-->
+
+    <section id="step-sec">
+      <div class="step-sec-info">
+        <h1>Bağlantı kuran, sürdüren ve ilham veren yerler yaratıyoruz</h1>
+        <p>
+          İş birliği yaptığınız diğer şirketler ve müşterilerinizle ilgili özet
+          bilgiler. Sosyal medya hesaplarınız, bloglarınız ve diğer iletişim
+          kanallarınız hakkında bilgiler.
+        </p>
+      </div>
+
+      <ul>
+        <li>
+          <h1><span>01.</span><br />İnteraktif Dizayn</h1>
+
+          <img src="./images/bookmark.png" alt="" />
+        </li>
+        <li>
+          <h1><span>01.</span><br />İnteraktif Dizayn</h1>
+
+          <img src="./images/contacts.png" alt="" />
+        </li>
+        <li>
+          <h1><span>01.</span><br />İnteraktif Dizayn</h1>
+
+          <img src="./images/cards.png" alt="" />
+        </li>
+        <li>
+          <h1><span>01.</span><br />İnteraktif Dizayn</h1>
+
+          <img src="./images/Chat.png" alt="" />
+        </li>
+      </ul>
+    </section>
+
+    <!--Liste Alanı Bitiş-->
+
     <!--Footer Alanı Başlangıç-->
     <footer>
       <div class="footer-area">
@@ -98,6 +192,6 @@
       <p class="footer-bottom">Copright &copy; 8-season-friday-project</p>
     </footer>
     <!--Footer Alanı Bitiş-->
-    <script src="./main.js"></script>
+    <script src="./Scripts/main.js"></script>
   </body>
 </html>
