--- a/8-cuma-proje-1/html/teams.html
+++ b/8-cuma-proje-1/html/teams.html
@@ -149,7 +149,7 @@
     <footer>
       <div class="footer-area">
         <div class="footer-links">
-          <h2>Şirket</h2>
+          <h2>Şirket Deneme Commiti</h2>
           <a href="">Projeler</a>
           <a href="">Takım</a>
           <a href="">Adımlar</a>
